fix - Fixing a projectCard, projectsList, projects styles on tablet version

--- a/src/components/projectCard/style.css
+++ b/src/components/projectCard/style.css
@@ -136,6 +136,17 @@
     padding-top: 24px;
   }
 
+  .project-card__info-title {
+    font-size: 24px;
+    line-height: 30px;
+  }
+
+  .project-card__info-desc {
+    margin-bottom: 18px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
   .project-card__info-box {
     margin-bottom: 18px;
   }
@@ -152,6 +163,10 @@
   .projcet-card__info-box-table-row:last-child {
     border-top: 1px solid var(--color-blue-700);
     border-bottom: none;
+  }
+
+  .project-card__skills {
+    max-width: 172px;
   }
 }
 
@@ -183,6 +198,10 @@
 
   .project-card__img {
     width: 100%;
+  }
+
+  .project-card__skills {
+    max-width: 100%;
   }
 }
 
