--- a/src/components/projectsList/style.css
+++ b/src/components/projectsList/style.css
@@ -6,7 +6,7 @@
 
 @media screen and (max-width: 768px) {
   .projects__list {
-    gap: 4rem;
+    gap: 3rem;
   }
 }
 
