--- a/src/sections/projects/style.css
+++ b/src/sections/projects/style.css
@@ -35,7 +35,7 @@
 
 @media screen and (max-width: 768px) {
   .projects {
-    padding: 12rem 0;
+    padding: 8rem 0;
   }
 
   .projects__filter {
